# DazBridgeUtils

./: .gitignore  CMakeLists.txt  DzBridge Script Documentation and Example.dsa  How To Use QA Test Scripts.md  QA Script Documentation and Examples.dsa  README.md
Extras/: README.md  apply_modesty_overlay.dsa  apply_modesty_overlay_M.dsa  apply_modesty_overlay_aArgs.dsa  assign_combined_textures.dsa  bake_all_instances_gui.dsa  bake_all_pivots_gui.dsa  bake_hands_and_feet_nogui.dsa  bake_pivots_and_instances_gui.dsa  bake_rfn_to_target_mesh_gui.dsa  blender_tools.py  bone_converter.dsa  bone_converter_aArgs.dsa  bone_converter_gui.dsa  bone_converter_nogui.dsa  combine_texture_parts.dsa  game_readiness_tools.py  generate_texture_parts.dsa  genesis_81_rig.json  genesis_9_rig.json  make_texture_atlas.py  sample_create_blend.py  util_output_rig.dsa
Test/: QA Manual Test Cases.md  RunAllTests.dsa
Test/Results/: TestCase_Results.json  TestCase_Results.txt  TestResults_DzBridgeAction.json  TestResults_DzBridgeAction.txt  TestResults_DzBridgeNameSpaceDzBridgeDialog.json  TestResults_DzBridgeNameSpaceDzBridgeDialog.txt  TestResults_DzBridgeNameSpaceDzBridgeMorphSelectionDialog.json  TestResults_DzBridgeNameSpaceDzBridgeMorphSelectionDialog.txt  TestResults_DzBridgeNameSpaceDzBridgeSubdivisionDialog.json  TestResults_DzBridgeNameSpaceDzBridgeSubdivisionDialog.txt
Test/UnitTests/: CMakeLists.txt  DzBridgeAction_Scriptable.cpp  DzBridgeAction_Scriptable.h  RunUnitTests.dsa  UnitTest.cpp  UnitTest_DzBridgeAction.cpp  UnitTest_DzBridgeAction.h  UnitTest_DzBridgeDialog.cpp  UnitTest_DzBridgeDialog.h  UnitTest_DzBridgeMorphSelectionDialog.cpp  UnitTest_DzBridgeMorphSelectionDialog.h  UnitTest_DzBridgeSubdivisionDialog.cpp  UnitTest_DzBridgeSubdivisionDialog.h
Test/testcases/: QA_Utility_Functions.dsa  _TC1001.dsa  test_runner.dsa
include/: CMakeLists.txt  DzBridgeAction.h  DzBridgeDialog.h  DzBridgeLodSettingsDialog.h  DzBridgeMorphSelectionDialog.h  DzBridgeSubdivisionDialog.h  FbxTools.h  ImageTools.h  MorphTools.h  MvcTools.h  OpenFBXInterface.h  OpenSubdivInterface.h  UnitTest.h  common_version.h  dzbridge.h
src/: CMakeLists.txt  DzBridgeAction.cpp  DzBridgeAction_Scriptable.cpp  DzBridgeAction_Scriptable.h  DzBridgeDialog.cpp  DzBridgeDialog_Scriptable.cpp  DzBridgeDialog_Scriptable.h  DzBridgeLodSettingsDialog.cpp  DzBridgeMorphSelectionDialog.cpp  DzBridgeMorphSelectionDialog_Scriptable.cpp  DzBridgeMorphSelectionDialog_Scriptable.h  DzBridgeSubdivisionDialog.cpp  DzBridgeSubdivisionDialog_Scriptable.cpp  DzBridgeSubdivisionDialog_Scriptable.h  FbxTools.cpp  ImageTools.cpp  MLDeformer.cpp  MorphTools.cpp  MvcTools.cpp  OpenFBXInterface.cpp  OpenSubdivInterface.cpp  pluginmain.cpp
